firefox vertical align fix landing page links

--- a/css/firefox.css
+++ b/css/firefox.css
@@ -3,6 +3,6 @@ Firefox css
 */
 
 .link-cards-wrapper .entry-head {
-    display: block !important;
+    display: flex !important;
+    align-items: center;
 }
-
